--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,9 @@
 /build
 /dist
 
+# testing
+/coverage
+
 # misc
 .DS_Store
 .env.local
@@ -18,3 +21,4 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 .idea
+.vscode
