--- a/package.json
+++ b/package.json
@@ -1,10 +1,16 @@
 {
   "name": "proger",
   "version": "0.0.1",
-  "description": "An application for project managing",
-  "main": "main.js",
+  "description": "An application for managing project",
+  "main": "app/index.js",
   "scripts": {
-    "start": "electron ."
+    "start": "concurrently \"cross-env BROWSER=none yarn start:react\" \"wait-on http://localhost:3000 && electron app\"",
+    "start:react": "react-app-rewired start",
+    "build": "yarn build:react-copy && yarn pack:electron",
+    "build:react": "react-app-rewired build",
+    "build:react-copy": "yarn build:react && yarn copy:electron",
+    "pack:electron": "electron-builder",
+    "copy:electron": "cp -r ./app/. ./build"
   },
   "repository": "",
   "keywords": [
@@ -19,6 +25,46 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "electron": "^2.0.2"
-  }
+    "concurrently": "^3.5.1",
+    "cross-env": "^5.2.0",
+    "electron": "^2.0.2",
+    "electron-builder": "^20.15.1",
+    "react-app-rewired": "^1.5.2",
+    "react-scripts": "^1.1.4",
+    "wait-on": "^2.1.0"
+  },
+  "dependencies": {
+    "electron-better-ipc": "^0.1.1",
+    "electron-is-dev": "^0.3.0",
+    "react": "^16.4.1",
+    "react-dom": "^16.4.1"
+  },
+  "build": {
+    "productName": "Proger",
+    "extends": null,
+    "files": [
+      "build/**/*"
+    ],
+    "mac": {
+      "icon": "icons/icon.icns"
+    },
+    "win": {
+      "target": "nsis",
+      "icon": "icons/icon.png"
+    },
+    "linux": {
+      "target": [
+        "AppImage",
+        "deb"
+      ],
+      "icon": "icons/icon.png"
+    },
+    "extraMetadata": {
+      "main": "build/index.js"
+    },
+    "directories": {
+      "buildResources": "assets"
+    }
+  },
+  "homepage": "./"
 }
