--- a/package.json
+++ b/package.json
@@ -34,11 +34,13 @@
     "electron-is-dev": "^0.3.0",
     "electron-store": "^2.0.0",
     "lodash": "^4.17.10",
+    "perfect-scrollbar": "^1.4.0",
     "prop-types": "^15.6.2",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-redux": "^5.0.7",
-    "styled-components": "^3.3.2"
+    "styled-components": "^3.3.2",
+    "xterm": "^3.4.1"
   },
   "license": "MIT",
   "devDependencies": {
