--- a/package.json
+++ b/package.json
@@ -27,8 +27,7 @@
   "dependencies": {
     "@material-ui/core": "^1.2.2",
     "@material-ui/icons": "^1.1.0",
-    "@reach/router": "^1.1.1",
-    "@rematch/core": "^0.6.0",
+    "@rematch/core": "^1.0.0-beta.4",
     "axios": "^0.18.0",
     "classnames": "^2.2.6",
     "electron-is-dev": "^0.3.0",
@@ -39,6 +38,7 @@
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-redux": "^5.0.7",
+    "react-router-dom": "^4.3.1",
     "styled-components": "^3.3.2",
     "xterm": "^3.4.1"
   },
