--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
   "dependencies": {
     "@material-ui/core": "^1.2.2",
     "@material-ui/icons": "^1.1.0",
-    "@rematch/core": "^1.0.0-beta.4",
+    "@rematch/core": "^0.6.0",
     "axios": "^0.18.0",
     "classnames": "^2.2.6",
     "electron-is-dev": "^0.3.0",
@@ -37,6 +37,7 @@
     "prop-types": "^15.6.2",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
+    "react-loadable": "^5.4.0",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "styled-components": "^3.3.2",
@@ -52,6 +53,7 @@
     "electron-builder": "^20.15.1",
     "electron-debug": "^2.0.0",
     "electron-devtools-installer": "^2.2.4",
+    "electron-redux-devtools": "^0.3.4",
     "react-app-rewired": "^1.5.2",
     "react-scripts": "^1.1.4",
     "wait-on": "^2.1.0"
