--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start:react": "cross-env BROWSER=none react-app-rewired start",
     "start:electron": "wait-on http://localhost:1314 && electron app",
     "build": "yarn build:react-copy && yarn pack:electron",
+    "build:flow": "flow-remove-types src/ -d lib/",
     "build:react": "react-app-rewired build",
     "build:react-copy": "yarn build:react && yarn copy:electron",
     "pack:electron": "electron-builder",
@@ -45,7 +46,9 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "babel-eslint": "^8.2.5",
     "babel-plugin-transform-export-extensions": "^6.22.0",
+    "babel-preset-flow": "^6.23.0",
     "concurrently": "^3.5.1",
     "cross-env": "^5.2.0",
     "devtron": "^1.4.0",
@@ -55,11 +58,13 @@
     "electron-devtools-installer": "^2.2.4",
     "electron-redux-devtools": "^0.3.4",
     "eslint": "^5.0.1",
+    "eslint-plugin-flowtype": "^2.49.3",
     "eslint-plugin-import": "^2.13.0",
     "eslint-plugin-node": "^6.0.1",
     "eslint-plugin-promise": "^3.8.0",
     "eslint-plugin-react": "^7.10.0",
     "eslint-plugin-standard": "^3.1.0",
+    "flow-bin": "^0.75.0",
     "react-app-rewired": "^1.5.2",
     "react-scripts": "^1.1.4",
     "wait-on": "^2.1.0"
